2007-06-07  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* iCalDateTime.m ([iCalDateTime
	-_setDateTime:dateTimeforAllDayEntity:forAllDayEntity]):
	inverted the all day logic because all day dates where generated
	for regular dates and the other way around...

	* iCalEvent.m ([iCalEvent
	-setAllDayWithStartDate:newStartDateduration:days]): new method
	that sets the start and end dates in an all day fashion.
	([iCalEvent -setEndDate:newEndDate]): no longer use the methods
	provided by the removed module CardGroup+iCal.
	([-isAllDay]): reimplemented method by testing if the start day
	component is an all day date.

	* iCalEntityObject.m ([iCalEntityObject -setCreated:newCreated]) 
	([iCalEntityObject -created], [-setLastModified:_value]) 
	([iCalEntityObject -lastModified]) 
	([iCalEntityObject -setTimeStampAsDate:newTimeStamp]) 
	([iCalEntityObject -timeStampAsDate], [-setStartDate:_value]) 
	([iCalEntityObject -startDate]): no longer use the methods
	provided by the removed module CardGroup+iCal.

	* iCalDateTime.m ([iCalDateTime -setDate:dateTime]): take the date
	passed as parameter as an all day date.
	([iCalDateTime -isAllDay]): new method determining whether the
	current value is an all day value.

	* NSString+NGCards.m ([NSString -isAllDayDate]): new method that
	determines whether the date represented in "self" is an all day
	date (date only) or not (date + time).

	* CardElement.h: moved IS_EQUAL macro from removed module
	"common.h".

	* CardGroup+iCal.[hm]: removed category module.

2007-04-27  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* NGVCard.m ([NGVCard -n]): simplified method by returning the
	values of the element returned by uniqueChildWithTag:.

2007-03-07  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* iCalEntityObject.m ([iCalEntityObject -symbolicAccessClass]):
	new method that parses the "CLASS" element of the card and returns
	an enum value.

	* NSString+NGCards.m ([NSString -foldedForVersitCards]):